[gd_scene load_steps=30 format=3 uid="uid://ndxoqx75ugao"]

[ext_resource type="Script" path="res://Scripts/bossMobRanged.gd" id="1_qqi13"]
[ext_resource type="PackedScene" uid="uid://dh0rfexrp5bql" path="res://Scenes/bossBullet.tscn" id="2_smfeb"]
[ext_resource type="Texture2D" uid="uid://dps6mu5rhgrio" path="res://Art/fly_attack.png" id="3_muaa2"]
[ext_resource type="Texture2D" uid="uid://c7ouf7fhdug5a" path="res://Art/fly_death-1.png.png" id="4_k5pyj"]
[ext_resource type="Texture2D" uid="uid://gdhrb4enini7" path="res://Art/fly_fly-1.png.png" id="5_oyk6r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_euw04"]
atlas = ExtResource("3_muaa2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gq7p"]
atlas = ExtResource("3_muaa2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ilhw"]
atlas = ExtResource("3_muaa2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7bdl"]
atlas = ExtResource("3_muaa2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7p5sl"]
atlas = ExtResource("3_muaa2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tln0"]
atlas = ExtResource("3_muaa2")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6u5k3"]
atlas = ExtResource("3_muaa2")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s15t5"]
atlas = ExtResource("3_muaa2")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct0yn"]
atlas = ExtResource("4_k5pyj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kglly"]
atlas = ExtResource("4_k5pyj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3adh7"]
atlas = ExtResource("4_k5pyj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gway7"]
atlas = ExtResource("4_k5pyj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f25a7"]
atlas = ExtResource("4_k5pyj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_va5ao"]
atlas = ExtResource("4_k5pyj")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt6uc"]
atlas = ExtResource("4_k5pyj")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ummk5"]
atlas = ExtResource("4_k5pyj")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4sex"]
atlas = ExtResource("5_oyk6r")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mhtw"]
atlas = ExtResource("5_oyk6r")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mlxc"]
atlas = ExtResource("5_oyk6r")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3w03"]
atlas = ExtResource("5_oyk6r")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws7hv"]
atlas = ExtResource("5_oyk6r")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_y6kv8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_euw04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gq7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ilhw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7bdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7p5sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tln0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6u5k3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s15t5")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct0yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kglly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3adh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gway7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f25a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va5ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt6uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ummk5")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4sex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mhtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mlxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3w03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws7hv")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_myhwb"]
size = Vector2(32, 27)

[sub_resource type="CircleShape2D" id="CircleShape2D_h7ii4"]
radius = 279.716

[node name="Ranged_mob_proto" type="CharacterBody2D" groups=["bossAttack", "bug"]]
scale = Vector2(2.1646, 2.1646)
motion_mode = 1
script = ExtResource("1_qqi13")
mob_projectile_scene = ExtResource("2_smfeb")
speed = 0.0
amplitude = 0.0
frequency = 0.0
attack_cooldown = 2.0
patrol_distance = 1.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_y6kv8")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_myhwb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_myhwb")

[node name="RayCast_left" type="RayCast2D" parent="."]
rotation = 1.5708
scale = Vector2(0.4, 0.4)

[node name="RayCast_right" type="RayCast2D" parent="."]
rotation = 4.71239
scale = Vector2(0.4, 0.4)

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_h7ii4")

[node name="DeathRaycast" type="RayCast2D" parent="."]
scale = Vector2(0.38, 0.38)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
